--- a/clientapp/src/main/res/values/strings.xml
+++ b/clientapp/src/main/res/values/strings.xml
@@ -2,11 +2,13 @@
     <string name="app_name">clientApp</string>
 
 
-
     <!-- Strings related to login -->
     <string name="prompt_email">手机号</string>
     <string name="prompt_number">手机号</string>
     <string name="prompt_check_code">验证码</string>
+    <string name="prompt_password">密码</string>
+    <string name="action_password_login">密码登录</string>
+    <string name="action_code_login">验证码登录</string>
     <string name="action_register">手机号登录</string>
     <string name="action_checkcode">获取验证码</string>
     <string name="action_sign_in_short">Sign in</string>
