--- a/clientapp/src/main/res/values/strings.xml
+++ b/clientapp/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="prompt_number">手机号</string>
     <string name="prompt_check_code">验证码</string>
     <string name="prompt_password">密码</string>
+    <string name="prompt_new_password">请输入新密码</string>
     <string name="action_password_login">密码登录</string>
     <string name="action_code_login">验证码登录</string>
     <string name="action_register">手机号登录</string>
