视频通话，还差指令转发视频通话

--- a/clientapp/src/main/res/values/strings.xml
+++ b/clientapp/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">clientApp</string>
 
+    <string name="agora_app_id">d7948fcf096e494cbee24c3a04045982</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">手机号</string>
