--- a/robotapp/src/main/res/values/strings.xml
+++ b/robotapp/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PatRobot</string>
+    <string name="agora_app_id">d7948fcf096e494cbee24c3a04045982</string>
 </resources>
